--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,24 +3,34 @@
 <h1>Welcome to tha snowboard app</h1>
 
 
-    
-<p>Name: <%= myView[0].sbType %> </p>
+
+<p>Snowboard brands: <%= sbInfo.length %> </p>
 
 <h3> add a new board </h3>
 
 <form method="POST" action="/addBoard">
-        <label for="sbBrand">Board Name</label>
-        <input name="sbBrand" value="new board">
-        <input type="submit" value="add a board" />
-</form>  
+    <label for="sbBrand">Board Brand</label>
+    <input name="sbBrand" value="new board"><br>
+    <label for="sbType">Board Type</label>
+    <input name="sbType" value="new type"><br>
+    <label for="foot"> Which foot is your main foot?</label>
+    <select id="foot" name="foot">
+        <option value="left">Left</option>
+        <option value="right">Right</option>
+    </select>
+    <input type="submit" value="add a board">
+
+</form>
 
 
 
 
-    <footer> sent from a file on my node server, yo!
+
+
+<footer> sent from a file on my node server, yo!
 
     <a href="/send">send</a>
-    
+
 
 
 </footer>
